aws/infrastructure/template.yml
Description: The FlowFi stack for document processing and management.
Resources:
  FlowFiDocumentsBucket04FFD1CE:
    Type: AWS::S3::Bucket
    Properties:
      CorsConfiguration:
        CorsRules:
          - AllowedHeaders:
              - "*"
            AllowedMethods:
              - GET
              - PUT
              - POST
              - DELETE
              - HEAD
            AllowedOrigins:
              - "*"
      VersioningConfiguration:
        Status: Enabled
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiDocumentsBucket/Resource
  FlowFiVpc22A9FC38:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: FlowFiStack/FlowFiVpc
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/Resource
  FlowFiVpcingressSubnet1SubnetD5C31D00:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: ingress
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: FlowFiStack/FlowFiVpc/ingressSubnet1
      VpcId:
        Ref: FlowFiVpc22A9FC38
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/ingressSubnet1/Subnet
  FlowFiVpcingressSubnet1RouteTableEE280825:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: FlowFiStack/FlowFiVpc/ingressSubnet1
      VpcId:
        Ref: FlowFiVpc22A9FC38
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/ingressSubnet1/RouteTable
  FlowFiVpcingressSubnet1RouteTableAssociationBB0B8952:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: FlowFiVpcingressSubnet1RouteTableEE280825
      SubnetId:
        Ref: FlowFiVpcingressSubnet1SubnetD5C31D00
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/ingressSubnet1/RouteTableAssociation
  FlowFiVpcingressSubnet1DefaultRoute618D4074:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: FlowFiVpcIGW57C3386F
      RouteTableId:
        Ref: FlowFiVpcingressSubnet1RouteTableEE280825
    DependsOn:
      - FlowFiVpcVPCGW89937217
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/ingressSubnet1/DefaultRoute
  FlowFiVpcingressSubnet1EIP661380A2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: FlowFiStack/FlowFiVpc/ingressSubnet1
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/ingressSubnet1/EIP
  FlowFiVpcingressSubnet1NATGateway200FE18D:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - FlowFiVpcingressSubnet1EIP661380A2
          - AllocationId
      SubnetId:
        Ref: FlowFiVpcingressSubnet1SubnetD5C31D00
      Tags:
        - Key: Name
          Value: FlowFiStack/FlowFiVpc/ingressSubnet1
    DependsOn:
      - FlowFiVpcingressSubnet1DefaultRoute618D4074
      - FlowFiVpcingressSubnet1RouteTableAssociationBB0B8952
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/ingressSubnet1/NATGateway
  FlowFiVpcingressSubnet2SubnetE9DB658A:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: ingress
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: FlowFiStack/FlowFiVpc/ingressSubnet2
      VpcId:
        Ref: FlowFiVpc22A9FC38
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/ingressSubnet2/Subnet
  FlowFiVpcingressSubnet2RouteTable63128226:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: FlowFiStack/FlowFiVpc/ingressSubnet2
      VpcId:
        Ref: FlowFiVpc22A9FC38
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/ingressSubnet2/RouteTable
  FlowFiVpcingressSubnet2RouteTableAssociationBF95DCC9:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: FlowFiVpcingressSubnet2RouteTable63128226
      SubnetId:
        Ref: FlowFiVpcingressSubnet2SubnetE9DB658A
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/ingressSubnet2/RouteTableAssociation
  FlowFiVpcingressSubnet2DefaultRouteA4C682F9:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: FlowFiVpcIGW57C3386F
      RouteTableId:
        Ref: FlowFiVpcingressSubnet2RouteTable63128226
    DependsOn:
      - FlowFiVpcVPCGW89937217
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/ingressSubnet2/DefaultRoute
  FlowFiVpcingressSubnet2EIP8FAE094C:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: FlowFiStack/FlowFiVpc/ingressSubnet2
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/ingressSubnet2/EIP
  FlowFiVpcingressSubnet2NATGateway9A1BE69A:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - FlowFiVpcingressSubnet2EIP8FAE094C
          - AllocationId
      SubnetId:
        Ref: FlowFiVpcingressSubnet2SubnetE9DB658A
      Tags:
        - Key: Name
          Value: FlowFiStack/FlowFiVpc/ingressSubnet2
    DependsOn:
      - FlowFiVpcingressSubnet2DefaultRouteA4C682F9
      - FlowFiVpcingressSubnet2RouteTableAssociationBF95DCC9
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/ingressSubnet2/NATGateway
  FlowFiVpcapplicationSubnet1SubnetDC2410A0:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: application
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: FlowFiStack/FlowFiVpc/applicationSubnet1
      VpcId:
        Ref: FlowFiVpc22A9FC38
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/applicationSubnet1/Subnet
  FlowFiVpcapplicationSubnet1RouteTable5F9C3097:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: FlowFiStack/FlowFiVpc/applicationSubnet1
      VpcId:
        Ref: FlowFiVpc22A9FC38
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/applicationSubnet1/RouteTable
  FlowFiVpcapplicationSubnet1RouteTableAssociationCCDFD368:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: FlowFiVpcapplicationSubnet1RouteTable5F9C3097
      SubnetId:
        Ref: FlowFiVpcapplicationSubnet1SubnetDC2410A0
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/applicationSubnet1/RouteTableAssociation
  FlowFiVpcapplicationSubnet1DefaultRoute6AE21989:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: FlowFiVpcingressSubnet1NATGateway200FE18D
      RouteTableId:
        Ref: FlowFiVpcapplicationSubnet1RouteTable5F9C3097
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/applicationSubnet1/DefaultRoute
  FlowFiVpcapplicationSubnet2SubnetC22176A2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: application
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: FlowFiStack/FlowFiVpc/applicationSubnet2
      VpcId:
        Ref: FlowFiVpc22A9FC38
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/applicationSubnet2/Subnet
  FlowFiVpcapplicationSubnet2RouteTableD23279EC:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: FlowFiStack/FlowFiVpc/applicationSubnet2
      VpcId:
        Ref: FlowFiVpc22A9FC38
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/applicationSubnet2/RouteTable
  FlowFiVpcapplicationSubnet2RouteTableAssociation77B0A80F:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: FlowFiVpcapplicationSubnet2RouteTableD23279EC
      SubnetId:
        Ref: FlowFiVpcapplicationSubnet2SubnetC22176A2
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/applicationSubnet2/RouteTableAssociation
  FlowFiVpcapplicationSubnet2DefaultRouteFF20DFF7:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: FlowFiVpcingressSubnet2NATGateway9A1BE69A
      RouteTableId:
        Ref: FlowFiVpcapplicationSubnet2RouteTableD23279EC
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/applicationSubnet2/DefaultRoute
  FlowFiVpcdatabaseSubnet1SubnetB0399C10:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.4.0/28
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: database
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: FlowFiStack/FlowFiVpc/databaseSubnet1
      VpcId:
        Ref: FlowFiVpc22A9FC38
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/databaseSubnet1/Subnet
  FlowFiVpcdatabaseSubnet1RouteTable2FACEDE2:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: FlowFiStack/FlowFiVpc/databaseSubnet1
      VpcId:
        Ref: FlowFiVpc22A9FC38
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/databaseSubnet1/RouteTable
  FlowFiVpcdatabaseSubnet1RouteTableAssociation9020902F:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: FlowFiVpcdatabaseSubnet1RouteTable2FACEDE2
      SubnetId:
        Ref: FlowFiVpcdatabaseSubnet1SubnetB0399C10
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/databaseSubnet1/RouteTableAssociation
  FlowFiVpcdatabaseSubnet2SubnetC8DAAC01:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.4.16/28
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: database
        - Key: aws-cdk:subnet-type
          Value: Isolated
        - Key: Name
          Value: FlowFiStack/FlowFiVpc/databaseSubnet2
      VpcId:
        Ref: FlowFiVpc22A9FC38
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/databaseSubnet2/Subnet
  FlowFiVpcdatabaseSubnet2RouteTableEFF7C940:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: FlowFiStack/FlowFiVpc/databaseSubnet2
      VpcId:
        Ref: FlowFiVpc22A9FC38
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/databaseSubnet2/RouteTable
  FlowFiVpcdatabaseSubnet2RouteTableAssociation56C2CACC:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: FlowFiVpcdatabaseSubnet2RouteTableEFF7C940
      SubnetId:
        Ref: FlowFiVpcdatabaseSubnet2SubnetC8DAAC01
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/databaseSubnet2/RouteTableAssociation
  FlowFiVpcIGW57C3386F:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: FlowFiStack/FlowFiVpc
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/IGW
  FlowFiVpcVPCGW89937217:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: FlowFiVpcIGW57C3386F
      VpcId:
        Ref: FlowFiVpc22A9FC38
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/VPCGW
  FlowFiVpcRestrictDefaultSecurityGroupCustomResourceAA491216:
    Type: Custom::VpcRestrictDefaultSG
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E
          - Arn
      DefaultSecurityGroupId:
        Fn::GetAtt:
          - FlowFiVpc22A9FC38
          - DefaultSecurityGroup
      Account:
        Ref: AWS::AccountId
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiVpc/RestrictDefaultSecurityGroupCustomResource/Default
  CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
      ManagedPolicyArns:
        - Fn::Sub: arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
        - PolicyName: Inline
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - ec2:AuthorizeSecurityGroupIngress
                  - ec2:AuthorizeSecurityGroupEgress
                  - ec2:RevokeSecurityGroupIngress
                  - ec2:RevokeSecurityGroupEgress
                Resource:
                  - Fn::Join:
                      - ""
                      - - "arn:"
                        - Ref: AWS::Partition
                        - ":ec2:"
                        - Ref: AWS::Region
                        - ":"
                        - Ref: AWS::AccountId
                        - :security-group/
                        - Fn::GetAtt:
                            - FlowFiVpc22A9FC38
                            - DefaultSecurityGroup
    Metadata:
      aws:cdk:path: FlowFiStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role
  CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket:
          Fn::Sub: cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}
        S3Key: ee7de53d64cc9d6248fa6aa550f92358f6c907b5efd6f3298aeab1b5e7ea358a.zip
      Timeout: 900
      MemorySize: 128
      Handler: __entrypoint__.handler
      Role:
        Fn::GetAtt:
          - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
          - Arn
      Runtime:
        Fn::FindInMap:
          - LatestNodeRuntimeMap
          - Ref: AWS::Region
          - value
      Description: Lambda function for removing all inbound/outbound rules from the VPC default security group
    DependsOn:
      - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
    Metadata:
      aws:cdk:path: FlowFiStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler
      aws:asset:path: asset.ee7de53d64cc9d6248fa6aa550f92358f6c907b5efd6f3298aeab1b5e7ea358a
      aws:asset:property: Code
  FlowFiDatabaseSubnetGroup2254079C:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for FlowFiDatabase database
      SubnetIds:
        - Ref: FlowFiVpcdatabaseSubnet1SubnetB0399C10
        - Ref: FlowFiVpcdatabaseSubnet2SubnetC8DAAC01
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiDatabase/SubnetGroup/Default
  FlowFiDatabaseSecurityGroup87F17F8B:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for FlowFiDatabase database
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: FlowFiVpc22A9FC38
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiDatabase/SecurityGroup/Resource
  FlowFiDatabaseSecretA143228F:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description:
        Fn::Join:
          - ""
          - - "Generated by the CDK for stack: "
            - Ref: AWS::StackName
      GenerateSecretString:
        ExcludeCharacters: " %+~`#$&*()|[]{}:;<>?!'/@\"\\"
        GenerateStringKey: password
        PasswordLength: 30
        SecretStringTemplate: '{"username":"postgres"}'
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiDatabase/Secret/Resource
  FlowFiDatabaseSecretAttachmentBC1BA19B:
    Type: AWS::SecretsManager::SecretTargetAttachment
    Properties:
      SecretId:
        Ref: FlowFiDatabaseSecretA143228F
      TargetId:
        Ref: FlowFiDatabase55ED954A
      TargetType: AWS::RDS::DBInstance
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiDatabase/Secret/Attachment/Resource
  FlowFiDatabase55ED954A:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: "100"
      CopyTagsToSnapshot: true
      DBInstanceClass: db.t4g.micro
      DBName: flowfi
      DBSubnetGroupName:
        Ref: FlowFiDatabaseSubnetGroup2254079C
      EnableIAMDatabaseAuthentication: true
      Engine: postgres
      EngineVersion: "15"
      MasterUserPassword:
        Fn::Join:
          - ""
          - - "{{resolve:secretsmanager:"
            - Ref: FlowFiDatabaseSecretA143228F
            - :SecretString:password::}}
      MasterUsername:
        Fn::Join:
          - ""
          - - "{{resolve:secretsmanager:"
            - Ref: FlowFiDatabaseSecretA143228F
            - :SecretString:username::}}
      PubliclyAccessible: false
      StorageType: gp2
      VPCSecurityGroups:
        - Fn::GetAtt:
            - FlowFiDatabaseSecurityGroup87F17F8B
            - GroupId
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiDatabase/Resource
  FlowFiLambdaRoleC1C32021:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiLambdaRole/Resource
  FlowFiLambdaRoleDefaultPolicy1D9E114A:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - s3:Abort*
              - s3:DeleteObject*
              - s3:GetBucket*
              - s3:GetObject*
              - s3:List*
              - s3:PutObject
              - s3:PutObjectLegalHold
              - s3:PutObjectRetention
              - s3:PutObjectTagging
              - s3:PutObjectVersionTagging
            Effect: Allow
            Resource:
              - Fn::GetAtt:
                  - FlowFiDocumentsBucket04FFD1CE
                  - Arn
              - Fn::Join:
                  - ""
                  - - Fn::GetAtt:
                        - FlowFiDocumentsBucket04FFD1CE
                        - Arn
                    - /*
          - Action: rds-db:connect
            Effect: Allow
            Resource:
              Fn::Join:
                - ""
                - - "arn:"
                  - Ref: AWS::Partition
                  - ":rds-db:"
                  - Ref: AWS::Region
                  - ":"
                  - Ref: AWS::AccountId
                  - ":dbuser:"
                  - Fn::GetAtt:
                      - FlowFiDatabase55ED954A
                      - DbiResourceId
                  - "/{{resolve:secretsmanager:"
                  - Ref: FlowFiDatabaseSecretAttachmentBC1BA19B
                  - :SecretString:username::}}
        Version: "2012-10-17"
      PolicyName: FlowFiLambdaRoleDefaultPolicy1D9E114A
      Roles:
        - Ref: FlowFiLambdaRoleC1C32021
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiLambdaRole/DefaultPolicy/Resource
  DocumentProcessingTopic88401B3C:
    Type: AWS::SNS::Topic
    Metadata:
      aws:cdk:path: FlowFiStack/DocumentProcessingTopic/Resource
  DocumentProcessorLambda23C0DFED:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket:
          Fn::Sub: cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}
        S3Key: 11ff378587df0376f1d5f94596eae88ca578b38f995030da97a333aac15f83eb.zip
      Environment:
        Variables:
          DATABASE_SECRET_ARN:
            Ref: FlowFiDatabaseSecretAttachmentBC1BA19B
          SNS_TOPIC_ARN:
            Ref: DocumentProcessingTopic88401B3C
      Handler: index.handler
      Role:
        Fn::GetAtt:
          - FlowFiLambdaRoleC1C32021
          - Arn
      Runtime: nodejs20.x
    DependsOn:
      - FlowFiLambdaRoleDefaultPolicy1D9E114A
      - FlowFiLambdaRoleC1C32021
    Metadata:
      aws:cdk:path: FlowFiStack/DocumentProcessorLambda/Resource
      aws:asset:path: asset.11ff378587df0376f1d5f94596eae88ca578b38f995030da97a333aac15f83eb
      aws:asset:is-bundled: false
      aws:asset:property: Code
  PresignedUrlLambdaB3FDC123:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket:
          Fn::Sub: cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}
        S3Key: 53bfcb207624a0b90e5f4406af9aa8e79425c9b92985f8cdaf8e07daef6f768a.zip
      Environment:
        Variables:
          BUCKET_NAME:
            Ref: FlowFiDocumentsBucket04FFD1CE
      Handler: index.handler
      Role:
        Fn::GetAtt:
          - FlowFiLambdaRoleC1C32021
          - Arn
      Runtime: nodejs20.x
    DependsOn:
      - FlowFiLambdaRoleDefaultPolicy1D9E114A
      - FlowFiLambdaRoleC1C32021
    Metadata:
      aws:cdk:path: FlowFiStack/PresignedUrlLambda/Resource
      aws:asset:path: asset.53bfcb207624a0b90e5f4406af9aa8e79425c9b92985f8cdaf8e07daef6f768a
      aws:asset:is-bundled: false
      aws:asset:property: Code
  FlowFiApi24D24C5B:
    Type: AWS::ApiGateway::RestApi
    Properties:
      Description: This service serves FlowFi.
      Name: FlowFi Service
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiApi/Resource
  FlowFiApiDeploymentABB377987450dbff612d80ff29d7dfa3e5cb49ac:
    Type: AWS::ApiGateway::Deployment
    Properties:
      Description: This service serves FlowFi.
      RestApiId:
        Ref: FlowFiApi24D24C5B
    DependsOn:
      - FlowFiApipresignedurlGET4173A497
      - FlowFiApipresignedurl3CA479A0
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiApi/Deployment/Resource
  FlowFiApiDeploymentStageprod6039A081:
    Type: AWS::ApiGateway::Stage
    Properties:
      DeploymentId:
        Ref: FlowFiApiDeploymentABB377987450dbff612d80ff29d7dfa3e5cb49ac
      RestApiId:
        Ref: FlowFiApi24D24C5B
      StageName: prod
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiApi/DeploymentStage.prod/Resource
  FlowFiApipresignedurl3CA479A0:
    Type: AWS::ApiGateway::Resource
    Properties:
      ParentId:
        Fn::GetAtt:
          - FlowFiApi24D24C5B
          - RootResourceId
      PathPart: presigned-url
      RestApiId:
        Ref: FlowFiApi24D24C5B
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiApi/Default/presigned-url/Resource
  FlowFiApipresignedurlGETApiPermissionFlowFiStackFlowFiApiE2002B47GETpresignedurl9B2BC070:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName:
        Fn::GetAtt:
          - PresignedUrlLambdaB3FDC123
          - Arn
      Principal: apigateway.amazonaws.com
      SourceArn:
        Fn::Join:
          - ""
          - - "arn:"
            - Ref: AWS::Partition
            - ":execute-api:"
            - Ref: AWS::Region
            - ":"
            - Ref: AWS::AccountId
            - ":"
            - Ref: FlowFiApi24D24C5B
            - /
            - Ref: FlowFiApiDeploymentStageprod6039A081
            - /GET/presigned-url
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiApi/Default/presigned-url/GET/ApiPermission.FlowFiStackFlowFiApiE2002B47.GET..presigned-url
  FlowFiApipresignedurlGETApiPermissionTestFlowFiStackFlowFiApiE2002B47GETpresignedurlACEF5356:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName:
        Fn::GetAtt:
          - PresignedUrlLambdaB3FDC123
          - Arn
      Principal: apigateway.amazonaws.com
      SourceArn:
        Fn::Join:
          - ""
          - - "arn:"
            - Ref: AWS::Partition
            - ":execute-api:"
            - Ref: AWS::Region
            - ":"
            - Ref: AWS::AccountId
            - ":"
            - Ref: FlowFiApi24D24C5B
            - /test-invoke-stage/GET/presigned-url
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiApi/Default/presigned-url/GET/ApiPermission.Test.FlowFiStackFlowFiApiE2002B47.GET..presigned-url
  FlowFiApipresignedurlGET4173A497:
    Type: AWS::ApiGateway::Method
    Properties:
      AuthorizationType: NONE
      HttpMethod: GET
      Integration:
        IntegrationHttpMethod: POST
        Type: AWS_PROXY
        Uri:
          Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - ":apigateway:"
              - Ref: AWS::Region
              - :lambda:path/2015-03-31/functions/
              - Fn::GetAtt:
                  - PresignedUrlLambdaB3FDC123
                  - Arn
              - /invocations
      ResourceId:
        Ref: FlowFiApipresignedurl3CA479A0
      RestApiId:
        Ref: FlowFiApi24D24C5B
    Metadata:
      aws:cdk:path: FlowFiStack/FlowFiApi/Default/presigned-url/GET/Resource
  HighErrorRateAlarm9E2FAEE9:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: Alarm if the Document Processor Lambda fails
      ComparisonOperator: GreaterThanOrEqualToThreshold
      Dimensions:
        - Name: FunctionName
          Value:
            Ref: DocumentProcessorLambda23C0DFED
      EvaluationPeriods: 1
      MetricName: Errors
      Namespace: AWS/Lambda
      Period: 300
      Statistic: Sum
      Threshold: 1
    Metadata:
      aws:cdk:path: FlowFiStack/HighErrorRateAlarm/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/21TTW/bMAz9LbsrWpfusqOTbEUO24wk6LWgZdZRY0uCRCUIBP/36SNOjGInPlJPj4+UveTfvv/gT1/g4haiPS162fCwJxAnFktvwT3zsPLihMTW7+qGSliBw5GhWPLwakQ6fq3XrPZNL8XeN6pceaCd9oQHaHp81B+1yjktJJDU6k5O4Oe2TuEP0AsQXuDKaivPET6Et4rQRjwRipNbVlEc5jigIrZH4a2k64vV3mQP88LIbOt42ABBEyfbKkegBLLS535ns5oXJnZUssXMZjXdHJnLVTeAgg4tD6VlIpZwANshzRzeCZ9PRiZh4GGny/JyrHVcdJ62oNhPxQEO2sj8GhmMrIehaYGHX16JabtzXKMdpHMxiwLPb+BctMyrFBgY2ZU1xt7oqDIyt7/BDZpeXyfnsyx+QF155QwiX3srMH0x9+QmVPBvpKNuU6mgkYle+/YCJI [...]
    Metadata:
      aws:cdk:path: FlowFiStack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Mappings:
  LatestNodeRuntimeMap:
    af-south-1:
      value: nodejs20.x
    ap-east-1:
      value: nodejs20.x
    ap-northeast-1:
      value: nodejs20.x
    ap-northeast-2:
      value: nodejs20.x
    ap-northeast-3:
      value: nodejs20.x
    ap-south-1:
      value: nodejs20.x
    ap-south-2:
      value: nodejs20.x
    ap-southeast-1:
      value: nodejs20.x
    ap-southeast-2:
      value: nodejs20.x
    ap-southeast-3:
      value: nodejs20.x
    ap-southeast-4:
      value: nodejs20.x
    ap-southeast-5:
      value: nodejs20.x
    ap-southeast-7:
      value: nodejs20.x
    ca-central-1:
      value: nodejs20.x
    ca-west-1:
      value: nodejs20.x
    cn-north-1:
      value: nodejs18.x
    cn-northwest-1:
      value: nodejs18.x
    eu-central-1:
      value: nodejs20.x
    eu-central-2:
      value: nodejs20.x
    eu-north-1:
      value: nodejs20.x
    eu-south-1:
      value: nodejs20.x
    eu-south-2:
      value: nodejs20.x
    eu-west-1:
      value: nodejs20.x
    eu-west-2:
      value: nodejs20.x
    eu-west-3:
      value: nodejs20.x
    il-central-1:
      value: nodejs20.x
    me-central-1:
      value: nodejs20.x
    me-south-1:
      value: nodejs20.x
    mx-central-1:
      value: nodejs20.x
    sa-east-1:
      value: nodejs20.x
    us-east-1:
      value: nodejs20.x
    us-east-2:
      value: nodejs20.x
    us-west-1:
      value: nodejs20.x
    us-west-2:
      value: nodejs20.x
Outputs:
  FlowFiApiEndpoint5827B35B:
    Value:
      Fn::Join:
        - ""
        - - https://
          - Ref: FlowFiApi24D24C5B
          - .execute-api.
          - Ref: AWS::Region
          - "."
          - Ref: AWS::URLSuffix
          - /
          - Ref: FlowFiApiDeploymentStageprod6039A081
          - /
  DocumentsBucketName:
    Description: The name of the S3 bucket for documents
    Value:
      Ref: FlowFiDocumentsBucket04FFD1CE
  ApiUrl:
    Description: The URL of the API Gateway
    Value:
      Fn::Join:
        - ""
        - - https://
          - Ref: FlowFiApi24D24C5B
          - .execute-api.
          - Ref: AWS::Region
          - "."
          - Ref: AWS::URLSuffix
          - /
          - Ref: FlowFiApiDeploymentStageprod6039A081
          - /
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - il-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
Parameters:
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Rules:
  CheckBootstrapVersion:
    Assertions:
      - Assert:
          Fn::Not:
            - Fn::Contains:
                - - "1"
                  - "2"
                  - "3"
                  - "4"
                  - "5"
                - Ref: BootstrapVersion
        AssertDescription: CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.
